# job-agent-adk-app

./: .env  Dockerfile  README.md  main.py  pyproject.toml  test.py  utils.py
agents/: application_agent.py  cover_letter_agent.py  matcher_agent.py
data/job_posts/: job1.txt  job2.txt
prompts/: cover_letter.jinja2  matcher.prompt
tools/: browser_tool.py  job_scraper_tool.py  resume_tool.py  tracker_tool.py
